# luxctl

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  SCRATCH.md  cliff.toml  clippy.toml  install.sh
.github/workflows/: auto-tag.yml  build-and-test.yml  build_and_test.yml  docs.yml  release.yml
docker/: Go1.22  Go1.22-race
docs/: book.toml  feature-roadmap.md  implementation-roadmap.md  key-decisions.md  lux-validator-spec.md  mission.md  systems_programming_challenges_for_lux.md  systems_programming_more.md
docs/src/: SUMMARY.md  introduction.md
docs/src/commands/: hints.md  project.md  run.md  task.md
docs/src/getting-started/: authentication.md  first-project.md  installation.md
docs/src/reference/: configuration.md  validators.md
docs/theme/: custom.css
scripts/: release.sh
src/: api.rs  auth.rs  config.rs  lib.rs  main.rs  message.rs  runtime.rs  shell.rs  state.rs  ui.rs
src/api/: client.rs  mod.rs  types.rs
src/commands/: doctor.rs  hints.rs  lab.rs  mod.rs  project.rs  run.rs  task.rs  tasks.rs  validate.rs
src/tasks/: http_server.rs  mod.rs  registry.rs
src/validators/: compile.rs  docker.rs  docker_legacy.rs  endpoint.rs  factory.rs  file.rs  http.rs  json_response.rs  mod.rs  parser.rs  port.rs  process.rs  scenario.rs
src/validators/docker/: executor.rs  mod.rs  registry.rs  validator.rs
tests/test-server/: Cargo.toml
tests/test-server/src/: main.rs
