[package]
name = "lux"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
once_cell = "1.20"
clap = { version = "4.5.52", features = ["derive"] }
async-trait = "0.1.89"
log = "0.4.28"
env_logger = "0.11"
regex = "1"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
