[package]
name = "lux"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
once_cell = "1.20"
clap = { version = "4.5.52", features = ["derive"] }
async-trait = "0.1.89"
log = "0.4.28"
env_logger = "0.11"
regex = "1"
color-eyre = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5.0"
secrecy = { version = "0.10.3", features = ["serde"] }
colored = "3.0.0"
termimad = "0.30"
hmac = "0.12"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[lints.clippy]
# Prevent common mistakes
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
dbg_macro = "warn"

# Code quality
needless_return = "warn"
redundant_clone = "warn"
redundant_closure = "warn"
useless_vec = "warn"
manual_map = "warn"
manual_filter = "warn"
map_flatten = "warn"
single_match = "warn"
single_match_else = "warn"
match_bool = "warn"
needless_bool = "warn"
if_same_then_else = "warn"
collapsible_if = "warn"
collapsible_else_if = "warn"

# Dead code / unused
unused_async = "warn"
unused_self = "warn"

[lints.rust]
unsafe_code = "warn"
dead_code = "warn"
